# FlexVer

./: .gitattributes  README.md  SPEC.md  pyproject.toml  shard.yml
.github/: CODEOWNERS  pull_request_template.md
.github/workflows/: test-crystal.yml  test-csharp.yml  test-d.yml  test-go.yml  test-java.yml  test-js.yml  test-python.yml  test-rust.yml
crystal/: README.md  shard.yml
crystal/spec/: flexver_spec.cr
crystal/src/: flexver.cr
csharp/: Directory.Build.props  Directory.Packages.props  FlexVer.sln  FlexVer.sln.DotSettings
csharp/FlexVer/: CHANGELOG.md  FlexVer.csproj  FlexVer.nuspec  FlexVerComparator.cs  FlexVerComparer.cs  README.md  ValueListBuilder.cs
csharp/FlexVerBenchmarkHarness/: FlexVerBenchmarkHarness.csproj  Program.cs
csharp/FlexVerTests/: FlexVerBasicTest.cs  FlexVerTests.csproj  Ordering.cs
d/: .gitignore  dub.json
d/source/: flexver.d
go/: CHANGELOG.md  README.md
go/flexver/: go.mod  main.go  main_test.go
java/: .gitignore  CHANGELOG.md  README.md  build.gradle  settings.gradle
java/src/main/java/com/unascribed/flexver/: FlexVerComparator.java
java/src/test/java/com/unascribed/flexver/: FlexVerBasicTest.java  Ordering.java
javascript/: CHANGELOG.md  index.js  package-lock.json  package.json  test.js
javascript/templates/: browser.js.hbs  node.js.hbs
js/: CHANGELOG.md  README.md  build.js  index.js  package.json  test.js
js/templates/: module.js.hbs
python/: .gitignore  README.md  flexver.py  pyproject.toml  test_flexver.py  tests.py
python/flexver/: __init__.py  flexver.py
rust/: CHANGELOG.md  Cargo.toml  README.md
rust/src/: lib.rs
src/java/: FlexVerComparator.java
test/: large.txt  test_vectors.txt
