[package]
name = "flexver-rs"
version = "0.1.0"
edition = "2021"
authors = ["Infinidoge <infinidoge@inx.moe>"]
description = "Comparer for FlexVer-spec versions"
repository = "https://github.com/unascribed/FlexVer"
license = "CC0-1.0"
include = [
    "/src/**",
    "/README.md"
]

[lib]
doctest = false
